# joels-portolio

./: .gitignore  DEPLOYMENT.md  README.md
.github/workflows/: azure-backend.yml  azure-frontend.yml
backend/: .env.example  pyproject.toml  requirements.txt  startup.sh
backend/app/: main.py
backend/app/api/routes/: admin.py  health.py  posts.py  projects.py
backend/app/core/: auth.py  config.py
backend/app/db/: __init__.py  data.py
backend/app/models/: post.py  project.py
backend/scripts/: sync_blog.py
backend/tests/: conftest.py  test_posts.py
frontend/: .env.example  next.config.mjs  package-lock.json  package.json  staticwebapp.config.json  tailwind.config.mjs
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/about/: page.tsx
frontend/app/admin/: layout.tsx  page.tsx
frontend/app/admin/posts/: AdminGuard.tsx  layout.tsx  page.tsx
frontend/app/admin/posts/[slug]/edit/: page.tsx
frontend/app/admin/posts/new/: page.tsx
frontend/app/blog/: page.tsx
frontend/app/blog/[slug]/: page.tsx
frontend/app/components/: HomePageClient.tsx  Navbar.tsx  RecentPosts.tsx  Timeline.tsx
frontend/app/contact/: page.tsx
frontend/app/lib/: api-fetch.ts  date.ts  posts.ts
frontend/app/projects/: page.tsx
frontend/contexts/: AuthContext.tsx
